fixed popup position; made sure that it doesn't overflow outside a scrollable container; added popup balloon tail

--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,6 @@
       ],
       "js": ["jquery-3.2.1.min.js", "content.js"]
     }
-  ]
+  ],
+  "web_accessible_resources": ["balloon-tail.png"]
 }
