--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Asana Droplr Preview",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "Displays a preview popup for droplr URLs in Asana.",
   "permissions": [
     "http://*.asana.com/",
@@ -12,8 +12,7 @@
     "storage"
   ],
   "browser_action": {
-    "default_popup": "views/settings.html",
-    "default_icon": "images/droplr.png"
+    "default_popup": "views/settings.html"
   },
   "commands": {
     "_execute_browser_action": {
@@ -35,6 +34,7 @@
         "js/jquery.regexSelector.js",
         "js/jquery.balloonPopup.js",
         "js/jquery.asanaDroplrPreview.js",
+        "js/jquery.asanaCloudAppPreview.js",
         "js/content.js"
       ],
       "css": [
